ToDo app WIP - with Redux-Thunk and JSON server installed

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,10 @@
 }
 
 .todo {
+  color: green;
 }
 
-.todo .strike {
-  color: red;
+.todo.strike {
+  color: grey;
+  text-decoration: line-through;
 }
